--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Clarence
-          <span class="text-primary">Taylor</span>
+        <h1 class="mb-0">
+          <span class="text-primary">廖品慈</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+        <div class="subheading mb-5">台北市木柵路一段17巷1號· 0905365071 ·
+          <a href="mailto:name@email.com">a107070017@mail.shu.edu.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">就讀於世新大學資訊傳播學系，興趣是運動特別是籃球</p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
