--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">
-          <span class="text-primary">廖品慈 Pin-Chi Liao</span>
+        <h1 class="mb-0">廖品慈
+          <span class="text-primary">Pin-Chi Liao</span>
           </h1>
         <div class="subheading mb-5">台北市木柵路一段17巷1號 0905365071
           <a href="mailto:name@email.com">a107070017@mail.shu.edu.com</a>
