--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-
+  
+  <!--google font-->
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC" rel="stylesheet">
+  
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
 
@@ -70,6 +73,7 @@
           <a href="mailto:name@email.com">a107070017@mail.shu.edu.com</a>
           </div>
         <p class="lead mb-5">我對於傳播產業和資訊方面軟體的應用有興趣所以選擇就讀世新大學資訊傳播學系希望未來能學以致用</p>
+		<p class="lead mb-5">I am interested in communication industry and apply to imformation so I choose major in information and communication at Shih Hsin University.I hope to use my learn in the furture. </p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
