--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
-
+  <link href="css/字體.min.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -69,9 +69,12 @@
         <h1 class="mb-0">廖品慈
           <span class="text-primary">Pin-Chi Liao</span>
           </h1>
-        <div class="subheading mb-5">台北市木柵路一段17巷1號 0905365071
+        <div class="subheading mb-5">
+		  <p>台北市木柵路一段17巷1號</p>
+		  <p> No. 1, Ln. 17, Sec. 1, Muzha Rd., Wenshan Dist., Taipei City 116, Taiwan</p>
+		  <p>0905365071</p>
           <a href="mailto:name@email.com">a107070017@mail.shu.edu.com</a>
-          </div>
+         </div>
         <p class="lead mb-5">我對於傳播產業和資訊方面軟體的應用有興趣所以選擇就讀世新大學資訊傳播學系希望未來能學以致用</p>
 		<p class="lead mb-5">I am interested in communication industry and apply to imformation so I choose major in information and communication at Shih Hsin University.I hope to use my learn in the furture.</p>
         <div class="social-icons">
