--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
-  <link href="css/字體.min.css" rel="stylesheet">
+  <link href="css/字體.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
