--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
-  <link href="css/字體.css" rel="stylesheet">
+  <link href="css/word.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -93,7 +93,20 @@
         </div>
       </div>
     </section>
-
+ <div class="row">
+    <div class="col-lg-6 mb-4">
+      <div class="card h-100">
+        <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">Project One</a>
+          </h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+        </div>
+      </div>
+    </div>
+	</div>
+	
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
