--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
-  <link href="css/word.css" rel="stylesheet">
+  <link href="css/word1.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -50,10 +50,10 @@
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+          <a class="nav-link js-scroll-trigger" href="#skills">Interests</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#interests">Gallery</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
@@ -71,6 +71,7 @@
           <span class="text-primary">Pin-Chi Liao</span>
           </h1>
         <div class="subheading mb-5">
+		  <p>
 		  <p>台北市木柵路一段17巷1號</p>
 		  <p> No. 1, Ln. 17, Sec. 1, Muzha Rd., Wenshan Dist., Taipei City 116, Taiwan</p>
 		  <p>0905365071</p>
@@ -79,34 +80,22 @@
         <p class="lead mb-5">我對於傳播產業和資訊方面軟體的應用有興趣所以選擇就讀世新大學資訊傳播學系希望未來能學以致用</p>
 		<p class="lead mb-5">I am interested in communication industry and apply to imformation so I choose major in information and communication at Shih Hsin University.I hope to use my learn in the furture.</p>
         <div class="social-icons">
-          <a href="#">
-            <i class="fab fa-linkedin-in"></i>
+          <a href="https://www.instagram.com/stsuperb_liao/#">
+            <i class="fab fa-instagram"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/mythsliao#">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
+          <a href="https://twitter.com/myths112358#">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#">
+          <a href="https://www.facebook.com/profile.php?id=100009947882208#">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
       </div>
     </section>
- <div class="row">
-    <div class="col-lg-6 mb-4">
-      <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-        <div class="card-body">
-          <h4 class="card-title">
-            <a href="#">Project One</a>
-          </h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-        </div>
-      </div>
-    </div>
-	</div>
+ 
 	
     <hr class="m-0">
 
@@ -264,9 +253,22 @@
       <div class="w-100">
         <h2 class="mb-5">作品 Gallery</h2>
         <p>影像數位化處理課程的照片</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p class="mb-0"></p>
       </div>
     </section>
+	 <div class="row">
+    <div class="col-lg-6 mb-4">
+      <div class="card h-100">
+        <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">Project One</a>
+          </h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+        </div>
+      </div>
+    </div>
+	</div>
 
     <hr class="m-0">
 
