--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
-        <h2 class="mb-5">興趣 Interestss</h2>
+        <h2 class="mb-5">興趣 Interests</h2>
 
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="list-inline dev-icons">
