--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Interests</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Gallery</a>
+          <a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
@@ -66,17 +66,16 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">廖品慈
+        <h1 class="mb-0">廖品慈</h1>
 		<h1>
           <span class="text-primary">Pin-Chi Liao</span>
-          </h1>
+        </h1>
         <div class="subheading mb-5">
-		  <p>
 		  <p>台北市木柵路一段17巷1號</p>
 		  <p> No. 1, Ln. 17, Sec. 1, Muzha Rd., Wenshan Dist., Taipei City 116, Taiwan</p>
 		  <p> TEL : 0905365071</p>
           <a href="mailto:name@email.com">a107070017@mail.shu.edu.com</a>
-         </div>
+        </div>
         <p class="lead mb-5">我對於傳播產業和資訊方面軟體的應用有興趣所以選擇就讀世新大學資訊傳播學系希望未來能學以致用</p>
 		<p class="lead mb-5">I am interested in communication industry and apply to imformation so I choose major in information and communication at Shih Hsin University.I hope to use my learn in the furture.</p>
         <div class="social-icons">
@@ -159,9 +158,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
+            <h3 class="mb-0">世新大學</h3>
+            <div class="subheading mb-3">資訊傳播學系</div>
+            <div>Information and Communication</div>
             <p>GPA: 3.23</p>
           </div>
           <div class="resume-date text-md-right">
@@ -171,7 +170,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
+            <h3 class="mb-0">國立岡山高中</h3>
             <div class="subheading mb-3">Technology Magnet Program</div>
             <p>GPA: 3.56</p>
           </div>
@@ -249,26 +248,25 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="gallery">
       <div class="w-100">
         <h2 class="mb-5">作品 Gallery</h2>
         <p>影像數位化處理課程的照片</p>
         <p class="mb-0"></p>
-      </div>
-    </section>
 	 <div class="row">
-    <div class="col-lg-6 mb-4">
-      <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+      <div class="col-lg-6 mb-4">
+       <div class="card h-100">
+        <a href="#"><img class="card-img-top" src="img/50289.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
             <a href="#">Project One</a>
           </h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+         </div>
         </div>
-      </div>
-    </div>
-	</div>
+       </div>
+	  </div>
+     </section>
 
     <hr class="m-0">
 
