--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
             <h3 class="mb-0">世新大學</h3>
             <div class="subheading mb-3">資訊傳播學系</div>
             <div>Information and Communication</div>
-            <p>GPA: 3.23</p>
+            <p>AVERAGE SCORE: 86.4 </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">September 2018 -</span>
           </div>
         </div>
 
@@ -175,7 +175,7 @@
             <p>GPA: 3.56</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">August 2015 - June 2018</span>
           </div>
         </div>
 
