--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <i class="fas fa-basketball-ball"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
+            <i class="fas fa-guitar"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-js-square"></i>
