--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
             <i class="fas fa-guitar"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
+            <i class="fas fa-headphones-alt"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
+            <i class="fas fa-suitcase-rolling"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-react"></i>
