--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <div class="w-100">
         <h2 class="mb-5">興趣 Interests</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        <div class="subheading mb-3"></div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
           <i class="fas fa-basketball-ball"></i>
@@ -203,10 +203,10 @@
             <i class="fas fa-suitcase-rolling"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-react"></i>
+            <i class="fas fa-desktop"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
+            <i class="fas fa-bug"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-sass"></i>
