--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#nterests">Interests</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a>
@@ -76,8 +76,8 @@
 		  <p> TEL : 0905365071</p>
           <a href="mailto:name@email.com">a107070017@mail.shu.edu.com</a>
         </div>
-        <p class="lead mb-5">我對於傳播產業和資訊方面軟體的應用有興趣所以選擇就讀世新大學資訊傳播學系希望未來能學以致用</p>
-		<p class="lead mb-5">I am interested in communication industry and apply to imformation so I choose major in information and communication at Shih Hsin University.I hope to use my learn in the furture.</p>
+        <p class="lead mb-5">我對於傳播產業和資訊方面軟體的應用有興趣所以選擇就讀世新大學資訊傳播學系希望未來能學以致用。此外我也對學習語言有興趣，最近因為喜歡看日劇而在學習日語，希望以後有機會可以到日本留學。</p>
+	<p class="lead mb-5">I am interested in communication industry and apply to imformation so I choose major in information and communication at Shih Hsin University.I hope to use my learn in the furture.In addition,I am also interested in study language.Recently I study in Japanese because I like to watch Japanese drama.In the future I hopes I have the opportunity to study abroad. </p>
         <div class="social-icons">
           <a href="https://www.instagram.com/stsuperb_liao/#">
             <i class="fab fa-instagram"></i>
