--- a/index.html
+++ b/index.html
@@ -158,21 +158,21 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">世新大學</h3>
-            <div class="subheading mb-3">資訊傳播學系</div>
-            <div>Information and Communication</div>
-            <p>AVERAGE SCORE: 86.4 </p>
+            <h3 class="mb-0">世新大學 SHIH HSIN UNIVERSITY</h3>
+            <div class="subheading mb-3">資訊傳播學系 Information and Communication</div>
+            <div></div>
+            <p> </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2018 -</span>
+            <span class="text-primary">September 2018 -  Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">國立岡山高中</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">國立岡山高中 National Kangshan Senior High School</h3>
+            <div class="subheading mb-3">語文班</div>
+            <p></p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2015 - June 2018</span>
