--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
+	<li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#clubs">Clubs</a>
+        </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#nterests">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a>
@@ -183,6 +186,35 @@
       </div>
     </section>
 
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="clubs">
+      <div class="w-100">
+        <h2 class="mb-5">社團 clubs</h2>
+	<div class="subheading mb-3">From Elementary school to Senior High school</div>
+	<ul class="list-inline dev-icons">
+          <li class="list-inline-item">
+            <i class="fas fa-running"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fas fa-book-open"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="far fa-lightbulb"></i>
+	  </li>
+          <li class="list-inline-item">
+            <i class="fas fa-film"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fas fa-basketball-ball"></i>
+          </li>
+          </ul>
+	<div class="subheading mb-3">名稱</div>
+	<ul class="list-inline dev-icons"> 
+		
+	      
+	      
+	  
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
