--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@
           </li>
           </ul>
 	<div class="subheading mb-3">名稱</div>
-	<ul class="list-inline dev-icons"> 
+	<ul class="list-inline dev-icons">
+       </div>
+     </section>      
 		
 	      
 	      
