--- a/index.html
+++ b/index.html
@@ -212,20 +212,20 @@
 	<div class="subheading mb-3">名稱</div>
 	<ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-check"></i>
-            跆拳道社</li>
+            <i class="fa-li fa fa-check">跆拳道社</i>
+          </li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            閱讀社</li>
+            <i class="fa-li fa fa-check">閱讀社</i>
+           </li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            思考辯論社</li>
+            <i class="fa-li fa fa-check">思考辯論社</i>
+          </li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            電影欣賞社</li>
+            <i class="fa-li fa fa-check">電影欣賞社</i>
+          </li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            籃球社</li>
+            <i class="fa-li fa fa-check">籃球社</i>
+          </li>
          </ul>
        </div>
      </section>      
