--- a/index.html
+++ b/index.html
@@ -257,24 +257,8 @@
           <li class="list-inline-item">
             <i class="fas fa-bug"></i>
           </li>
-         
         </ul>
-
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-        </ul>
+       <div class="subheading mb-3">我</div>
       </div>
     </section>
 
@@ -293,7 +277,7 @@
           <h4 class="card-title">
             <a href="#">Project One</a>
           </h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <p class="card-text">燈光與水平運用</p>
          </div>
         </div>
        </div>
