--- a/index.html
+++ b/index.html
@@ -107,45 +107,34 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">國家地理知識大競賽</h3>
+            <div class="subheading mb-3">Taiwan National Geographic Championship</div>
+            <p>八年級和九年級時代表學校參加第九屆和第十屆的國家地理知識大競賽</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary"> October 2013 & September 2014 </span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">中學生網站</h3>
+            <div class="subheading mb-3">Middle School Student Website</div>
+            <p>高二時投稿中學生網站全國高級中學閱讀心得寫作第1051031梯次優等，書籍名稱:讓你變堅強的一句話</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">October 2016</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">送愛到偏遠國家</h3>
+            <div class="subheading mb-3">Send Love to Remote and Isolated Country</div>
+            <p>高二時在生活科技課使用木頭動手製作無動力自走玩具，並把玩具寄給偏遠國家的小朋友，讓他們不使用電池或花費任何金錢也能從中發現玩具的有趣</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">December 2016</span>
           </div>
         </div>
 
@@ -191,7 +180,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="clubs">
       <div class="w-100">
         <h2 class="mb-5">社團 clubs</h2>
-	<div class="subheading mb-3">From Elementary school to Senior High school</div>
+	<div class="subheading mb-3">From junior high school to Senior High school</div>
 	<ul class="list-inline dev-icons">
           <li class="list-inline-item">
             <i class="fas fa-running"></i>
@@ -258,7 +247,7 @@
             <i class="fas fa-bug"></i>
           </li>
         </ul>
-       <div class="subheading mb-3">我</div>
+       <div class="subheading mb-3">我平時的興趣是運動，最喜歡的運動是籃球，因為喜歡運動小時候學過跆拳道</div>
       </div>
     </section>
 
