--- a/index.html
+++ b/index.html
@@ -272,15 +272,48 @@
        </div>
       <div class="col-lg-6 mb-4">
        <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="img/50289.jpg" alt=""></a>
+        <a href="#"><img class="card-img-top" src="img/001.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
             <a href="#">Project One</a>
           </h4>
-          <p class="card-text">燈光與水平運用</p>
+          <p class="card-text">背景與物體顏色對比</p>
          </div>
         </div>
        </div>
+      <div class="col-lg-6 mb-4">
+       <div class="card h-100">
+        <a href="#"><img class="card-img-top" src="img/002.jpg" alt=""></a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">Project One</a>
+          </h4>
+          <p class="card-text">亮度調整</p>
+         </div>
+        </div>
+       </div>
+      <div class="col-lg-6 mb-4">
+       <div class="card h-100">
+        <a href="#"><img class="card-img-top" src="img/003.jpg" alt=""></a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">Project One</a>
+          </h4>
+          <p class="card-text">人物與背景的垂直與水平運用</p>
+         </div>
+        </div>
+       </div>
+      <div class="col-lg-6 mb-4">
+       <div class="card h-100">
+        <a href="#"><img class="card-img-top" src="img/004.jpg" alt=""></a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">Project One</a>
+          </h4>
+          <p class="card-text">景深效果拍攝</p>
+         </div>
+        </div>
+       </div> 
 	  </div>
      </section>
 
