--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <a href="#"><img class="card-img-top" src="img/001.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Project One</a>
+            <a href="#">Project Two</a>
           </h4>
           <p class="card-text">背景與物體顏色對比</p>
          </div>
@@ -286,7 +286,7 @@
         <a href="#"><img class="card-img-top" src="img/002.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Project One</a>
+            <a href="#">Project Three</a>
           </h4>
           <p class="card-text">亮度調整</p>
          </div>
@@ -297,7 +297,7 @@
         <a href="#"><img class="card-img-top" src="img/003.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Project One</a>
+            <a href="#">Project Four</a>
           </h4>
           <p class="card-text">人物與背景的垂直與水平運用</p>
          </div>
@@ -308,7 +308,7 @@
         <a href="#"><img class="card-img-top" src="img/004.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Project One</a>
+            <a href="#">Project Five</a>
           </h4>
           <p class="card-text">景深效果拍攝</p>
          </div>
