--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 	   	  
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">興趣 Interests</h2>
 
