--- a/index.html
+++ b/index.html
@@ -322,34 +322,118 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="future plans">
       <div class="w-100">
         <h2 class="mb-5">大學未來計畫 future plans</h2>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
-        </ul>
+       <ul class="fa-ul mb-0">
+		<div id="accordion">
+         <div class="card">
+          <div class="card-header">
+           <a class="card-link" data-toggle="collapse" href="#collapseOne">
+        2019~2020年
+      </a>
+    </div>
+    <div id="collapseOne" class="collapse show" data-parent="#accordion">
+      <div class="card-body">
+        <table class="table table-hover">
+		 <thead>
+		  <tr>
+		   <th>預計時間</th>
+		   <th>達成目標和學習計畫</th>
+		   </tr>
+		 </thead>
+       <tbody>
+	      <tr>
+	       <td>今年三月</td>
+	       <td>報名編劇課程，增進自己寫作能力和了解寫作劇本的格式和如何組織較好的結構。</td>
+	       </tr>
+	      <tr>
+	       <td>今年四月</td>
+	       <td>申請雙主修。</td>
+		  </tr>
+		  <tr>
+	       <td>今年暑假</td>
+	       <td>因為想要增加自己的溝通技巧，所以報名卡內基口條訓練。</td>
+	      </tr>
+		  <tr>
+	       <td></td>
+	       <td></td>
+		  </tr>
+	   </tbody>
+	  </table>
+	  </div>
+	 </div>
+  </div>
+
+  <div class="card">
+    <div class="card-header">
+      <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
+        2020~2021年
+      </a>
+    </div>
+    <div id="collapseTwo" class="collapse" data-parent="#accordion">
+      <div class="card-body">
+	  <table class="table table-hover">
+		 <thead>
+		  <tr>
+		   <th>預計時間</th>
+		   <th>達成目標和學習計畫</th>
+		   </tr>
+		 </thead>
+       <tbody>
+	      <tr>
+	       <td>大二或大三</td>
+	       <td>今年去參加了湖南衛視的說明會希望能去那邊實習。</td>
+	       </tr>
+	      <tr>
+	       <td>大三</td>
+	       <td>出國當交換生增進自己的視野，並且想要去體驗看看不同國家的教學方法。 </td>
+	      </tr>
+		  <tr>
+	       <td>今年暑假</td>
+	       <td>要上premiere的課程，增進自己剪片能力。</td>
+		  </tr>
+	   </tbody>
+	  </table>
+        
+      </div>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-header">
+      <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
+        2021~2022年
+      </a>
+    </div>
+    <div id="collapseThree" class="collapse" data-parent="#accordion">
+      <div class="card-body">
+         <table class="table table-hover">
+		 <thead>
+		  <tr>
+		   <th>預計時間</th>
+		   <th>達成目標和學習計畫</th>
+		   </tr>
+		 </thead>
+       <tbody>
+	      <tr>
+	       <td>大二或大三</td>
+	       <td>今年去參加了湖南衛視的說明會希望能去那邊實習。</td>
+	       </tr>
+	      <tr>
+	       <td>大三</td>
+	       <td>出國當交換生增進自己的視野，並且想要去體驗看看不同國家的教學方法。 </td>
+	      </tr>
+		  <tr>
+	       <td>今年暑假</td>
+	       <td>要上premiere的課程，增進自己剪片能力。</td>
+		  </tr>
+	   </tbody>
+	  </table>
+      </div>
+    </div>
+  </div>
+
+</div>
+          
+      </ul>
       </div>
     </section>
 
