--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <i class="fas fa-bug"></i>
           </li>
         </ul>
-       <div class="subheading mb-3">我平時的興趣是運動，最喜歡的運動是籃球。國小一年級時開始學習跆拳道國中時加入跆拳道社，假日也會和爸爸一起騎腳踏車遊高雄，除了運動之外我也喜歡聽音樂或彈吉他讓自己可以放鬆心情釋放壓力，看戲劇也是抒發的好窗口我特別喜歡看日劇，可以從日劇題材了解當今日本所面臨的問題以及看見台灣未來可能會面臨的問題。我還喜歡旅行挖掘人潮比較少的景點像台南的喜樹老街或後壁鄉，雖然這些地方人煙稀少但當地人卻都充滿了濃濃的人情味。最後我一直很喜歡的事是觀察大自然還有昆蟲，大自然的千變萬化和形形色色的昆蟲都有們個自存在的意義，讓我可以從中領悟到自己也是可以付出的 </div>
+       <div class="subheading mb-3">我平時的興趣是運動，最喜歡的運動是籃球。國小一年級時開始學習跆拳道國中時加入跆拳道社，假日也會和爸爸一起騎腳踏車遊高雄，除了運動之外我也喜歡聽音樂或彈吉他讓自己可以放鬆心情釋放壓力，看戲劇也是抒發的好窗口我特別喜歡看日劇，可以從日劇題材了解當今日本所面臨的問題以及看見台灣未來可能會面臨的問題。我還喜歡旅行挖掘人潮比較少的景點像台南的喜樹老街或後壁鄉，雖然這些地方人煙稀少但當地人卻都充滿了濃濃的人情味。最後我一直很喜歡的事是觀察大自然還有昆蟲，大自然的千變萬化和形形色色的昆蟲都有他們個自存在的意義，讓我可以從中領悟到自己也是可以付出的 </div>
       </div>
     </section>
 
