--- a/index.html
+++ b/index.html
@@ -341,15 +341,15 @@
 		 </thead>
            <tbody>
 	      <tr>
-	       <td>今年五月</td>
+	       <td>五月</td>
 	       <td>世新大學運動會啦啦比賽，世新資傳 氣勢非凡 世新資傳 We are NO.1 NO.1</td>
 	      </tr>
 	      <tr>
-	       <td>今年六月</td>
+	       <td>六月</td>
 	       <td>統整紀錄大學一年級的課程學習</td>
 	      </tr>
                <tr>
-	        <td>今年暑假</td>
+	        <td>七月 八月</td>
 	        <td>學習研讀日文N3，一個人的日本旅行</td>
 	       </tr>
 	  </tbody>
@@ -380,7 +380,7 @@
 	      </tr>
 	      <tr>
 	       <td>六月或七月</td>
-	       <td>到日本交換學校至少一個月增廣自己的視野，學習不同國家的文化</td>
+	       <td>到日本交換學校至少一個月增廣自己的視野，參與奧運學習不同國家的文化</td>
 	      </tr>
 	      <tr>
 	       <td>暑假</td>
