--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
       <div class="col-lg-6 mb-4">
        <div class="card h-100">
         <a href="#"><img class="card-img-top" src="img/001.jpg" alt=""></a>
+	<img src="img/001.jpg" style="filter:FlipH()">
         <div class="card-body">
           <h4 class="card-title">
             <a href="#">Project Two</a>
