--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 		  <p> TEL : 0905365071</p>
           <a href="mailto:name@email.com">a107070017@mail.shu.edu.com</a>
         </div>
-        <p class="lead mb-5">我對於傳播產業和資訊方面軟體的應用有興趣所以選擇就讀世新大學資訊傳播學系希望未來能學以致用。此外我也對學習語言有興趣，最近因為喜歡看日劇而在學習日語，希望以後有機會可以到日本留學。</p>
-	<p class="lead mb-5">I am interested in communication industry and apply to imformation so I choose major in information and communication at Shih Hsin University.I hope to use my learn in the furture.In addition,I am also interested in study language.Recently I study in Japanese because I like to watch Japanese drama.In the future I hopes I have the opportunity to study abroad. </p>
+        <p class="lead mb-5">我對於傳播產業和資訊方面軟體的應用有興趣，所以選擇就讀世新大學資訊傳播學系，希望未來能學以致用。此外我也對學習語言有興趣，最近因為喜歡看日劇而在學習日語，希望以後有機會可以到日本留學。</p>
+	<p class="lead mb-5">I am interested in communication professional and apply to imformation so I choose major in information and communications at Shih Hsin University.I hope to use my knowledge in the furture.In addition,I am also interested in studying language.Recently I study in Japanese because I like to watch Japanese drama.In the future I hope to study abroad. </p>
         <div class="social-icons">
           <a href="https://www.instagram.com/stsuperb_liao/#">
             <i class="fab fa-instagram"></i>
@@ -120,7 +120,8 @@
           <div class="resume-content">
             <h3 class="mb-0">中學生網站</h3>
             <div class="subheading mb-3">Middle School Student Website</div>
-            <p>高二時投稿中學生網站全國高級中學閱讀心得寫作第1051031梯次優等，書籍名稱:讓你變堅強的一句話</p>
+            <p>高二時投稿中學生網站
+	       全國高級中學閱讀心得寫作第1051031梯次優等，書籍名稱:讓你變堅強的一句話</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">October 2016</span>
@@ -179,7 +180,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="clubs">
       <div class="w-100">
-        <h2 class="mb-5">社團 clubs</h2>
+        <h2 class="mb-5">社團 Clubs</h2>
 	<div class="subheading mb-3">From junior high school to Senior High school</div>
 	<ul class="list-inline dev-icons">
           <li class="list-inline-item">
@@ -321,7 +322,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="future plans">
       <div class="w-100">
-       <h2 class="mb-5">大學未來計畫 future plans</h2>
+       <h2 class="mb-5">大學未來計畫 Future plans</h2>
         <ul class="fa-ul mb-0">
 		<div id="accordion">
          <div class="card">
