--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
           <div class="resume-content">
             <h3 class="mb-0">中學生網站</h3>
             <div class="subheading mb-3">Middle School Student Website</div>
-            <p>高二時投稿中學生網站
-	       全國高級中學閱讀心得寫作第1051031梯次優等，書籍名稱:讓你變堅強的一句話</p>
+            <p>高二時投稿中學生網站</p>
+	    <p>全國高級中學閱讀心得寫作，第1051031梯次優等</p>
+            <p>書籍名稱:讓你變堅強的一句話</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">October 2016</span>
@@ -164,7 +165,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">世新大學</h3>
-            <div class="subheading mb-3">SHIH HSIN UNIVERSITY</div>
+            <div class="subheading mb-3">Shih Hsin University</div>
 	    <div>資訊傳播學系</div>
             <p>Information and Communication</p>
           </div>
