--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
           <div class="resume-content">
             <h3 class="mb-0">國家地理知識大競賽</h3>
             <div class="subheading mb-3">Taiwan National Geographic Championship</div>
-            <p>八年級和九年級時代表學校參加第九屆和第十屆的國家地理知識大競賽</p>
+            <p>八年級和九年級時代表學校參加</p>
+            <p>第九屆和第十屆的國家地理知識大競賽</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary"> October 2013 & September 2014 </span>
@@ -133,7 +134,9 @@
           <div class="resume-content">
             <h3 class="mb-0">送愛到偏遠國家</h3>
             <div class="subheading mb-3">Send Love to Remote and Isolated Country</div>
-            <p>高二時在生活科技課使用木頭動手製作無動力自走玩具，並把玩具寄給偏遠國家的小朋友，讓他們不使用電池或花費任何金錢也能從中發現玩具的有趣</p>
+            <p>高二時在生活科技課使用木頭動手製作無動力自走玩具</p>
+            <p>並把玩具寄給偏遠國家的小朋友</p>
+            <p>讓他們不使用電池或花費任何金錢，也能從中發現玩具的有趣</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">December 2016</span>
