--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#future plans">future plans</a>
+          <a class="nav-link js-scroll-trigger" href="#future plans">Future plans</a>
         </li>
       </ul>
     </div>
@@ -79,8 +79,8 @@
 		  <p> TEL : 0905365071</p>
           <a href="mailto:name@email.com">a107070017@mail.shu.edu.com</a>
         </div>
-        <p class="lead mb-5">我對於傳播產業和資訊方面軟體的應用有興趣，所以選擇就讀世新大學資訊傳播學系，希望未來能學以致用。此外我也對學習語言有興趣，最近因為喜歡看日劇而在學習日語，希望以後有機會可以到日本留學。</p>
-	<p class="lead mb-5">I am interested in communication professional and apply to imformation so I choose major in information and communications at Shih Hsin University.I hope to use my knowledge in the furture.In addition,I am also interested in studying language.Recently I study in Japanese because I like to watch Japanese drama.In the future I hope to study abroad. </p>
+        <p class="lead mb-5">我對於傳播產業和資訊方面軟體的應用有興趣，所以選擇就讀世新大學資訊傳播學系，希望未來能學以致用。此外我也對學習語言有興趣，最近因為喜歡看日劇，而在學習日語，希望以後有機會可以到日本留學。</p>
+	<p class="lead mb-5">I am interested in communication professional and apply to information so I choose major in information and communications at Shih Hsin University. I hope to use my knowledge in the future. In addition, I am also interested in studying a language. Recently I study in Japanese because I like watching Japanese drama. In the future, I hope to study abroad. </p>
         <div class="social-icons">
           <a href="https://www.instagram.com/stsuperb_liao/#">
             <i class="fab fa-instagram"></i>
@@ -109,8 +109,7 @@
           <div class="resume-content">
             <h3 class="mb-0">國家地理知識大競賽</h3>
             <div class="subheading mb-3">Taiwan National Geographic Championship</div>
-            <p>八年級和九年級時代表學校參加</p>
-            <p>第九屆和第十屆的國家地理知識大競賽</p>
+            <p>八年級和九年級時，代表學校參加第九屆和第十屆的國家地理知識大競賽</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary"> October 2013 & September 2014 </span>
@@ -121,9 +120,7 @@
           <div class="resume-content">
             <h3 class="mb-0">中學生網站</h3>
             <div class="subheading mb-3">Middle School Student Website</div>
-            <p>高二時投稿中學生網站</p>
-	    <p>全國高級中學閱讀心得寫作，第1051031梯次優等</p>
-            <p>書籍名稱:讓你變堅強的一句話</p>
+            <p>高二時投稿中學生網站，全國高級中學閱讀心得寫作，第1051031梯次優等。書籍名稱:讓你變堅強的一句話</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">October 2016</span>
@@ -134,9 +131,7 @@
           <div class="resume-content">
             <h3 class="mb-0">送愛到偏遠國家</h3>
             <div class="subheading mb-3">Send Love to Remote and Isolated Country</div>
-            <p>高二時在生活科技課使用木頭動手製作無動力自走玩具</p>
-            <p>並把玩具寄給偏遠國家的小朋友</p>
-            <p>讓他們不使用電池或花費任何金錢，也能從中發現玩具的有趣</p>
+            <p>高二時在生活科技課，使用木頭動手製作無動力自走玩具，並把玩具寄給偏遠國家的小朋友，讓他們不使用電池，或花費任何金錢，也能從中發現玩具的有趣</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">December 2016</span>
@@ -252,7 +247,7 @@
             <i class="fas fa-bug"></i>
           </li>
         </ul>
-       <div class="subheading mb-3">我平時的興趣是運動，最喜歡的運動是籃球。國小一年級時開始學習跆拳道國中時加入跆拳道社，假日也會和爸爸一起騎腳踏車遊高雄，除了運動之外我也喜歡聽音樂或彈吉他讓自己可以放鬆心情釋放壓力，看戲劇也是抒發的好窗口我特別喜歡看日劇，可以從日劇題材了解當今日本所面臨的問題以及看見台灣未來可能會面臨的問題。我還喜歡旅行挖掘人潮比較少的景點像台南的喜樹老街或後壁鄉，雖然這些地方人煙稀少但當地人卻都充滿了濃濃的人情味。最後我一直很喜歡的事是觀察大自然還有昆蟲，大自然的千變萬化和形形色色的昆蟲都有他們個自存在的意義，讓我可以從中領悟到自己也是可以付出的 </div>
+       <div class="subheading mb-3">我平時的興趣是運動，最喜歡的運動是籃球。國小一年級時開始學習跆拳道，國中時加入跆拳道社。假日會和爸爸一起騎腳踏車遊高雄，除了運動之外，我也喜歡聽音樂或彈吉他，讓自己可以放鬆心情釋放壓力，看戲劇也是抒發的好窗口，我特別喜歡看日劇，可以從日劇題材了解當今日本所面臨的問題，以及看見台灣未來可能會面臨的問題。我還喜歡旅行，挖掘人潮比較少的景點，像台南的喜樹老街或後壁鄉，雖然這些地方人煙稀少，但當地人卻都充滿了濃濃的人情味。最後我一直很喜歡的事是觀察大自然和昆蟲，大自然的千變萬化和形形色色的昆蟲都有他們個自存在的意義，讓我可以從中領悟到自己也是可以付出的。</div>
       </div>
     </section>
 
@@ -266,7 +261,7 @@
 	 <div class="row">
       <div class="col-lg-6 mb-4">
        <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="img/50289.jpg" alt=""></a>
+        <a href="#"><img class="card-img-top" src="img/001.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
             <a href="#">Project One</a>
@@ -277,7 +272,7 @@
        </div>
       <div class="col-lg-6 mb-4">
        <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="img/001.jpg" alt=""></a>
+        <a href="#"><img class="card-img-top" src="img/002.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
             <a href="#">Project Two</a>
@@ -288,7 +283,7 @@
        </div>
       <div class="col-lg-6 mb-4">
        <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="img/002.jpg" alt=""></a>
+        <a href="#"><img class="card-img-top" src="img/003.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
             <a href="#">Project Three</a>
@@ -299,7 +294,7 @@
        </div>
       <div class="col-lg-6 mb-4">
        <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="img/003.jpg" alt=""></a>
+        <a href="#"><img class="card-img-top" src="img/004.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
             <a href="#">Project Four</a>
@@ -310,7 +305,7 @@
        </div>
       <div class="col-lg-6 mb-4">
        <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="img/004.jpg" alt=""></a>
+        <a href="#"><img class="card-img-top" src="img/005.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
             <a href="#">Project Five</a>
@@ -321,16 +316,16 @@
        </div>
       <div class="col-lg-6 mb-4">
        <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="img/005.jpg" alt=""></a>
+        <a href="#"><img class="card-img-top" src="img/006.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Project One</a>
+            <a href="#">Project Six</a>
           </h4>
           <p class="card-text">明暗的對比</p>
          </div>
         </div>
        </div>
-       </div>
+      </div>
      </section>
 
     <hr class="m-0">
