--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <a href="mailto:name@email.com">a107070017@mail.shu.edu.com</a>
         </div>
         <p class="lead mb-5">我對於傳播產業和資訊方面軟體的應用有興趣，所以選擇就讀世新大學資訊傳播學系，希望未來能學以致用。此外我也對學習語言有興趣，最近因為喜歡看日劇，而在學習日語，希望以後有機會可以到日本留學。</p>
-	<p class="lead mb-5">I am interested in communication professional and apply to information so I choose major in information and communications at Shih Hsin University. I hope to use my knowledge in the future. In addition, I am also interested in studying a language. Recently I study in Japanese because I like watching Japanese drama. In the future, I hope to study abroad. </p>
+	<p class="lead mb-5">I am interested in communication professional and apply to information so I choose major in information and communications at Shih Hsin University. I hope to use my knowledge in my job. In addition, I am also interested in studying a language. Recently I study in Japanese because I like watching Japanese drama. In the future, I look forward to a opportunity to study abroad. </p>
         <div class="social-icons">
           <a href="https://www.instagram.com/stsuperb_liao/#">
             <i class="fab fa-instagram"></i>
