--- a/index.html
+++ b/index.html
@@ -247,7 +247,9 @@
             <i class="fas fa-bug"></i>
           </li>
         </ul>
-       <div class="subheading mb-3">我平時的興趣是運動，最喜歡的運動是籃球。國小一年級時，開始學習跆拳道，國中時加入跆拳道社。假日會和爸爸一起騎腳踏車遊高雄。除了運動之外，我也喜歡聽音樂或彈吉他，讓自己可以放鬆心情釋放壓力，看戲劇也是抒發的好窗口，我特別喜歡看日劇，可以從日劇題材了解當今日本所面臨的問題，以及看見台灣未來可能會面臨的問題。我還喜歡旅行，挖掘人潮比較少的景點，像台南的喜樹老街或後壁鄉，雖然這些地方人煙稀少，但當地人卻都充滿了濃濃的人情味。最後我一直很喜歡的事是觀察大自然和昆蟲，大自然的千變萬化和形形色色的昆蟲都有他們個自存在的意義，讓我可以從中領悟到自己也是可以付出的。</div>
+       <div class="subheading mb-3">
+	<div></div>
+	 <p>我平時的興趣是運動，最喜歡的運動是籃球。國小一年級時，開始學習跆拳道，國中時加入跆拳道社。假日會和爸爸一起騎腳踏車遊高雄。除了運動之外，我也喜歡聽音樂或彈吉他，讓自己可以放鬆心情釋放壓力，看戲劇也是抒發的好窗口，我特別喜歡看日劇，可以從日劇題材了解當今日本所面臨的問題，以及看見台灣未來可能會面臨的問題。我還喜歡旅行，挖掘人潮比較少的景點，像台南的喜樹老街或後壁鄉，雖然這些地方人煙稀少，但當地人卻都充滿了濃濃的人情味。最後我一直很喜歡的事是觀察大自然和昆蟲，大自然的千變萬化和形形色色的昆蟲都有他們個自存在的意義，讓我可以從中領悟到自己也是可以付出的。</p>
       </div>
     </section>
 
